Fix alignment when lines wrap on small screens

--- a/src/components/resume/experience.module.css
+++ b/src/components/resume/experience.module.css
@@ -2,6 +2,7 @@
   align-items: center;
   display: grid;
   grid-auto-flow: column;
+  grid-column-gap: 1em;
   grid-template-columns: auto auto;
   grid-template-rows: 1fr 0.5fr;
   justify-content: space-between;
